# Machine-Learning-and-Crud-with-FastAPI

./: .gitignore  README.md  exemplo3-fastapi.py  pyproject.toml
async/: main_sincrono.py
fastapi-crud/: docker-compose.yml
fastapi-crud/src/controller/: user.py
fastapi-crud/src/db/: connection.py
fastapi-crud/src/models/: user.py
fastapi-crud/src/routes/: app.py  user.py
fastapi-ml/: best_regression_model.pkl  main.py  modelo.py
fastapi_tests/: exemplo-api-2-dobra-num.py  exemplo-api-2-num.py  exemplo-api.py  exemplo3-fastapi.py  exemplo4.py  fastai-num-requests.py  fastapi-num.py
src/: modelo.py  modelo_casas.pkl
tests/async/: main_async.py
