[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
