[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["schonsnatan <natanschons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
requests = "^2.32.5"
joblib = "^1.5.2"
scikit-learn = "^1.7.2"
pydantic = "^2.11.9"
aiohttp = "^3.12.15"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
